# de-zoomcamp

./: .gitignore  pyproject.toml
week_1_basics_n_setup/1_terraform_yc/cloud-terraform/: main.tf
week_1_basics_n_setup/2_docker_sql/: Dockerfile  docker-compose.yaml  ingest_data.py  pg-test-connection.ipynb  upload-data.ipynb
week_2_workflow_orchestration/flows/01_start/: ingest_data_flow.py  parameterized_flow.py
week_2_workflow_orchestration/flows/02_yc/: etl_web_to_ycs.py
