[tool.poetry]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Yuriy <gyuv28@gmail.com>"]
readme = "README.md"
packages = [{include = "data_engineering_zoomcamp"}]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^6.5.2"
pandas = "^1.5.3"
pyarrow = "^10.0.1"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
